--- a/src/app/shared-timesheet/components/timesheet-filter-view/timesheet-filter-view.component.html
+++ b/src/app/shared-timesheet/components/timesheet-filter-view/timesheet-filter-view.component.html
@@ -1,9 +1,9 @@
 <form fxLayout="column" fxLayoutAlign="space-around stretch" *ngIf="form" [formGroup]="form" class="m-3">
-  <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'userName')">
+  <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'user')">
     <mat-form-field>
-      <mat-select formControlName="userName" placeholder="Velg ansatt">
+      <mat-select formControlName="user" placeholder="Velg ansatt" [compareWith]="compareUser">
         <mat-option>Ingen</mat-option>
-        <mat-option *ngFor="let user of config?.state?.users" [value]="user.userName">
+        <mat-option *ngFor="let user of config?.state?.users" [value]="user">
           {{ user.firstName }} {{ user.lastName }}
         </mat-option>
       </mat-select>
@@ -28,7 +28,7 @@
   </ng-container>
 
   <ng-container *ngIf="!(config?.disabledFilters | arrayIncludes : 'dateRange')">
-    <label class="mat-caption">Velg tidsrom</label>
+    <label class="mat-caption">Velg tidsrom *</label>
 
     <mat-radio-group color="primary" formControlName="dateRangePreset" fxLayoutGap="8px" class="mb-2">
       <mat-radio-button [value]="dateRangePresets.CurrentWeek">
@@ -46,7 +46,7 @@
       <mat-radio-button [value]="dateRangePresets.Custom" #customDateRangeSelect>
         Velg tid
       </mat-radio-button>
-      <mat-radio-button [value]="dateRangePresets.None">
+      <mat-radio-button [value]="dateRangePresets.ShowAll">
         Vis alt
       </mat-radio-button>
     </mat-radio-group>
