--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -3,7 +3,7 @@
     <div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
         <app-list-card *ngFor="let user of users" 
             [config]="{startIcon:'person', endIcon: 'chevron_right'}"
-            (click)="goToWeekList(user.userName)"> 
+            (click)="goToWeekList(user)"> 
                 {{user.firstName + ' ' +user.lastName}}
         </app-list-card>
         <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
