--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,24 +1,9 @@
-<app-main-top-nav [config]="navConfig">
-    <div fxLayout="column" fxLayoutGap="8px" class="h-100 p-2" *ngIf="vm$ | async; let vm">
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+    <div fxLayout="column" fxLayoutGap="8px" class="h-100">
 
-        <span fxLayout="row" fxLayoutAlign="space-between center" class="fadeInLeft">  
-            <mat-button-toggle-group aria-label="Grupper etter tidsperiode" [ngModel]="vm.groupBy"
-                (ngModelChange)="changeGroupingType($event)">
-                <mat-button-toggle [value]="groupByTypes.Day">Dag</mat-button-toggle>
-                <mat-button-toggle [value]="groupByTypes.Week">Uke</mat-button-toggle>
-                <mat-button-toggle [value]="groupByTypes.Month">Måned</mat-button-toggle>
-                <mat-button-toggle [value]="groupByTypes.Year">År</mat-button-toggle>
-            </mat-button-toggle-group>  
-    
-            <button mat-raised-button class="bg-accent" (click)="openBottomSheet()"
-                [matBadge]="vm.activeCriteriaCount" matBadgeSize="small">
-                <mat-icon>filter_list</mat-icon>
-            </button>  
-        </span>
-    
         <app-timesheet-statistic-table #statTable class="mat-elevation-z2" fxFlex 
-            [config]="{data: vm.records}">
+            [config]="{data: vm.content.records}">
         </app-timesheet-statistic-table>
-    
+
     </div>
 </app-main-top-nav>
