--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,7 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
 
 .color-primary{color:$primary!important;}
 
-.bg-accent{background:$accent!important;color:black;}
+.bg-accent{background:$accent!important;color:black!important;}
 .bg-accent-light{ background:$accent-light!important;color:black;}
 
 .color-accent{color:$accent!important;}
