move active prop count check to seperate helper fn

--- a/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -1,4 +1,4 @@
-<app-main-top-nav  *ngIf="vm$ | async; let vm" 
+<app-main-top-nav  *ngIf="vm$ | async; let vm" [fabs]="vm.fabs" [chipRows]="vm.chipRows"
   [config]="vm.navConfig">
 
   <app-mission-list-view 
