remove spacers from chip row, bugged

--- a/src/styles/lazy-styles/mat-styles.scss
+++ b/src/styles/lazy-styles/mat-styles.scss
@@ -55,6 +55,7 @@
       overflow-x:auto!important;
       overflow-y:hidden;
       margin: 2px 0 2px 0px;
+      padding-left:2px;
       .mat-chip{
         max-width:50%;
       }
