fix trackby app button

--- a/src/app/shared/components/main-top-nav/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/src/app/shared/components/main-top-nav/main-top-nav-bar/main-top-nav-bar.component.html
@@ -37,7 +37,7 @@
             icon: 'search'}">
         </app-button>
 
-        <app-button *ngFor="let button of config?.buttons | transformButtons: ButtonTypes.Icon" [config]="button">
+        <app-button *ngFor="let button of config?.buttons | transformButtons: ButtonTypes.Icon; trackBy: TrackByButton" [config]="button">
         </app-button>
 
     </ng-container>
