fix navbar  config

--- a/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -1,4 +1,4 @@
-<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+<app-main-top-nav *ngIf="vm$ | async; let vm" [fabs]="vm.fabs" [config]="navConfig">
     <app-selectable-list #documentList *ngIf="vm.content.documents" identifier="id"
         [totalRows]="vm.content.isXs ? 2 : 4"
         [entities]="vm.content.documents" 
