--- a/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -1,4 +1,4 @@
-<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
+<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="navConfig" [fabs]="vm.fabs">
     <app-selectable-list #imageList 
         *ngIf="vm.content.images" identifier="id"
         [totalRows]="vm.content.isXs ? 2 : 4"
