--- a/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,6 +1,6 @@
 
     <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
-        <app-mission-details-view [mission]="vm.content">
+        <app-mission-details-view [mission]="vm.mission">
         </app-mission-details-view>
     </app-main-top-nav>
   
