--- a/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/src/app/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -2,7 +2,7 @@
   [config]="vm.navConfig">
 
   <app-mission-list-view 
-    [missions]="vm.content" 
+    [missions]="vm.missions" 
     (search)="searchMissions($event)">
   </app-mission-list-view>
 
