--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
@@ -1,10 +1,10 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
-    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.content else loading">
+    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.summaries else loading">
     
-        <ng-container *ngIf="vm.content?.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
+        <ng-container *ngIf="vm.summaries?.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
     
         <cdk-virtual-scroll-viewport itemSize="82" maxBufferPx="800" minBufferPx="800" fxFlex>
-            <app-swipe-card *cdkVirtualFor="let summary of vm.content; trackBy: trackByWeek; templateCacheSize:0"
+            <app-swipe-card *cdkVirtualFor="let summary of vm.summaries; trackBy: trackByWeek; templateCacheSize:0"
                 [navButton]="{callback: selectWeek, params: summary.week}" [swipeEnabled]="summary.openHours > 0"
                 [swipeButton]="{
                             callback: changeTimesheetStatuses, 
