--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
@@ -3,9 +3,9 @@
     <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch">
 
         <cdk-virtual-scroll-viewport itemSize="78" maxBufferPx="800" minBufferPx="800" fxFlex 
-            *ngIf="vm.content?.length else noContent">
+            *ngIf="vm.summaries?.length else noContent">
             <div class="app-card mat-elevation-z2 m-1" matRipple
-                *cdkVirtualFor="let summary of vm.content; trackBy: trackByWeekNr; templateCacheSize:0" 
+                *cdkVirtualFor="let summary of vm.summaries; trackBy: trackByWeekNr; templateCacheSize:0" 
                 (click)="goToWeekView(summary.year, summary.week)">
                 <app-timesheet-summary-card-content [summary]="summary"></app-timesheet-summary-card-content>
             </div>
