--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
@@ -1,21 +1,21 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
 
-  <div class="h-100" fxLayout="row" fxLayoutAlign="start stretch" *ngIf="vm.content"
+  <div class="h-100" fxLayout="row" fxLayoutAlign="start stretch" 
   (swiperight)="previousWeek()" 
   (swipeleft)="nextWeek()">
 
-    <ng-container *ngFor="let weekDay of ((isXs$ | async) ? 5 : 7) | arrayFromNumber"> 
+    <ng-container *ngFor="let weekDay of (vm.isXs ? 5 : 7) | arrayFromNumber"> 
 
         <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
 
           <app-timesheet-day-label class="w-100 mb-1" style="z-index:1"
-            [date]="weekCriteria | getDateByDateParams : weekDay"
+            [date]="vm.weekCriteria | getDateByDateParams : weekDay"
             (labelClicked)="openTimesheetForm(null, {date: $event})">
           </app-timesheet-day-label>
 
           <div class="w-100" style="padding: 0 2px 0 2px; z-index:0" 
             fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
-            <ng-container *ngFor="let timesheet of vm.content[weekDay]?.timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;" >
+            <ng-container *ngFor="let timesheet of vm.summaries[weekDay]?.timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;" >
               <app-timesheet-mission-bar class="mb-1 fadeInDown"                      
                 [timesheet]="timesheet"
                 (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm(timesheet.id)">
