--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -2,7 +2,7 @@
 
   <div class="p-2 max-width" *ngIf="users$ | async else loading; let users; let index = index">
 
-    <app-user-card *ngFor="let user of users" 
+    <app-user-card *ngFor="let user of users; trackBy: trackByUser" 
       [user]="user"
       [editButton]="{
         icon: 'edit', 
@@ -18,43 +18,10 @@
         type: ButtonTypes.Icon
       }">
     </app-user-card>
-    <app-user-card *ngFor="let user of users" 
-      [user]="user"
-      [editButton]="{
-        icon: 'edit', 
-        allowedRoles: [Roles.Leder], 
-        callback: openUserForm, params: [user.userName],
-        type: ButtonTypes.Icon
-      }"
-      [newPasswordButton]="{
-        icon: 'vpn_key', 
-        colorClass: 'color-accent',
-        allowedRoles: [Roles.Leder], 
-        callback: openNewPasswordForm, params: [user.userName],
-        type: ButtonTypes.Icon
-      }">
-    </app-user-card>
-    <app-user-card *ngFor="let user of users" 
-    [user]="user"
-    [editButton]="{
-      icon: 'edit', 
-      allowedRoles: [Roles.Leder], 
-      callback: openUserForm, params: [user.userName],
-      type: ButtonTypes.Icon
-    }"
-    [newPasswordButton]="{
-      icon: 'vpn_key', 
-      colorClass: 'color-accent',
-      allowedRoles: [Roles.Leder], 
-      callback: openNewPasswordForm, params: [user.userName],
-      type: ButtonTypes.Icon
-    }">
-  </app-user-card>
+
   </div>
   
 </app-main-top-nav>
-
-
 
 <ng-template #loading>
   <mat-spinner class="center-spinner" color="accent"></mat-spinner>
