improve view model observables

--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -2,7 +2,7 @@
     <div fxLayout="column" fxLayoutGap="8px" class="h-100">
 
         <app-timesheet-statistic-table #statTable class="mat-elevation-z2" fxFlex 
-            [config]="{data: vm.summaries.records}">
+            [config]="vm">
         </app-timesheet-statistic-table>
 
     </div>
