--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -1,9 +1,9 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
-    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.content else loading">
-        <ng-container *ngIf="vm.content.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
+    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.timesheets else loading">
+        <ng-container *ngIf="vm.timesheets.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
     
         <cdk-virtual-scroll-viewport itemSize="108" maxBufferPx="800" minBufferPx="800" fxFlex>
-            <div class="m-1" *cdkVirtualFor="let timesheet of vm.content; trackBy: trackById">
+            <div class="m-1" *cdkVirtualFor="let timesheet of vm.timesheets; trackBy: trackById">
                 <app-timesheet-card adminView="true" [timesheet]="timesheet"
                     (statusChanged)="changeTimesheetStatus($event.id, $event.status)">
                 </app-timesheet-card>
@@ -12,10 +12,11 @@
     </div>
 </app-main-top-nav>
 
+<ng-template #loading>
+    <mat-spinner *ngIf="loading$ | async else noContent" class="center-spinner" color="accent"></mat-spinner>
+</ng-template>
+
 <ng-template #noContent>
     <div class="w-100 text-center mt-2 mat-h3">Fant ingen timer!</div>
 </ng-template>
 
-<ng-template #loading>
-    <mat-spinner *ngIf="loading$ | async else noContent" class="center-spinner" color="accent"></mat-spinner>
-</ng-template>
