--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-view/user-timesheet-week-view.component.html
@@ -1,31 +1,30 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
 
-  <div class="h-100" fxLayout="row" fxLayoutAlign="start stretch" 
-  (swiperight)="previousWeek()" 
-  (swipeleft)="nextWeek()">
+  <div style="min-height:100%" fxLayout="row"
+    (swiperight)="previousWeek()" 
+    (swipeleft)="nextWeek()">
 
     <ng-container *ngFor="let weekDay of (vm.isXs ? 5 : 7) | arrayFromNumber"> 
 
-        <div class="w-100" fxLayout="column" fxLayoutAlign="start center">
+        <div class="w-100" fxLayout="column" fxLayoutAlign="start stretch">
 
           <app-timesheet-day-label class="w-100 mb-1" style="z-index:1"
             [date]="vm.weekCriteria | getDateByDateParams : weekDay"
             (labelClicked)="openTimesheetForm(null, {date: $event})">
           </app-timesheet-day-label>
 
-          <div class="w-100" style="padding: 0 2px 0 2px; z-index:0" 
-            fxLayout="column" fxLayoutAlign="start stretch" fxFlex>
-            <ng-container *ngFor="let timesheet of vm.summaries[weekDay]?.timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;" >
-              <app-timesheet-mission-bar class="mb-1 fadeInDown"                      
-                [timesheet]="timesheet"
-                (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm(timesheet.id)">
-              </app-timesheet-mission-bar>
-            </ng-container>
-          </div>
+          <ng-container *ngIf="vm.summaries && vm.summaries[weekDay]">
+            <app-timesheet-mission-bar class="fadeInDown" style="margin:2px" 
+              *ngFor="let timesheet of vm.summaries[weekDay].timesheets | sortByDate: 'startTime' : 'asc'; trackBy: trackByTimesheet;"                   
+              [timesheet]="timesheet"
+              (barClicked)="timesheet.status ? openTimesheetCard(timesheet.id) : openTimesheetForm(timesheet.id)">
+            </app-timesheet-mission-bar>
+          </ng-container>
 
         </div>
         
         <mat-divider vertical="true" *ngIf="weekDay !== 7"></mat-divider>
+        
     </ng-container>
 
   </div>
