--- a/src/app/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-list/mission-list-view/mission-list-view.component.html
@@ -4,11 +4,8 @@
 
     <cdk-virtual-scroll-viewport itemSize="60" maxBufferPx="800" minBufferPx="800" fxFlex>
         <ng-container *cdkVirtualFor="let mission of missions; trackBy: trackByFn;">
-            <app-list-card
-                [config]="{
-                    startIcon: 'home_work', panelClass: 'mt-1', 
-                    endIcon: mission.finished ? 'check':'chevron_right'             
-                }" 
+            <app-list-card startIcon="home_work" panelClass="mt-1" 
+                [endIcon]="mission.finished ? 'check':'chevron_right'"
                 [routerLink]="['/oppdrag', mission.id, 'detaljer']">
                 <span fxHide.xs>{{'(' + mission.id + ') '}}</span>{{ mission.address }}
             </app-list-card>
