--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,8 +1,7 @@
 <app-main-top-nav [config]="{title: 'Administrer timer'}">
 
     <div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
-        <app-list-card *ngFor="let user of users" 
-            [config]="{startIcon:'person', endIcon: 'chevron_right'}"
+        <app-list-card *ngFor="let user of users" startIcon="person" endIcon="chevron_right"
             (click)="goToWeekList(user)"> 
                 {{user.firstName + ' ' +user.lastName}}
         </app-list-card>
