fix timesheet admin pages

--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -1,7 +1,5 @@
 <app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig">
-    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.timesheets else loading">
-        <ng-container *ngIf="vm.timesheets.length == 0" [ngTemplateOutlet]="noContent"></ng-container>
-    
+    <div class="h-100 max-width" fxLayout="column" fxLayoutAlign="start stretch" *ngIf="vm.timesheets?.length else loading">  
         <cdk-virtual-scroll-viewport itemSize="108" maxBufferPx="800" minBufferPx="800" fxFlex>
             <div class="m-1" *cdkVirtualFor="let timesheet of vm.timesheets; trackBy: trackById">
                 <app-timesheet-card adminView="true" [timesheet]="timesheet"
